# rtsan_standalone

./: CMakeLists.txt  README.md  rtsan_demo.cc
.github/workflows/: ci.yml
include/rtsan_standalone/: rtsan.hh
macos/: libclang_rt.rtsan_osx_dynamic.dylib
src/: rtsan.cc  rtsan_standalone.hh
